fix: filter dropdown on mobile

--- a/src/styles/Filter.module.scss
+++ b/src/styles/Filter.module.scss
@@ -20,9 +20,11 @@
             border-radius: 0.5em;
             min-width: 50px;
             cursor: pointer;
+            transition: scale 0.2s;
 
             &:hover {
                 background-color: #B4B4B4;
+                scale: 1.06;
             }
 
         }
@@ -39,6 +41,8 @@
             left: 0;
             right: 0;
             bottom: 0;
+            width: 100%;
+            height: 100%;
             z-index: 1;
             cursor: pointer;
 
@@ -118,27 +122,26 @@
 
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1024px) {
     .filter__container {
+        padding: 1.5rem 2rem;
+
         .verbose__options {
             width: 100%;
             font-weight: 600;
             font-size: 1.5rem;
-            justify-content: space-evenly;
+            justify-content: space-between;
             margin-bottom: 1.5em;
         }
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 480px) {
     .filter__container {
         padding: 1.5rem;
         .verbose__options{
-            li {
-                border-radius: 0.1rem;
-                // border-left: 1px solid #B4B4B4;
-                // border-right: 1px solid #B4B4B4;
-            }
+            justify-content: space-evenly;
+
         }
     }
 }
