--- a/src/styles/PlaceToStay.module.scss
+++ b/src/styles/PlaceToStay.module.scss
@@ -1,7 +1,7 @@
 @import './colors.scss';
 
 .main__content {
-    margin-bottom: 3em;
+    margin-bottom: 8rem;
 
     .card__grid {
         display: grid;
